changes the title

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en" class="no-js">
 <head>
 	<meta charset="utf-8" />
-	<title>Reevan Web Design &amp; Digital Marketing Agency HTML Template</title>
-	<meta name="description" content="Creative Agency, Marketing Agency Template">
-	<meta name="keywords" content="Creative Agency, Marketing Agency">
-	<meta name="author" content="rajesh-doot">
+	<title>The App Guys &amp; Mobile App Development Agency</title>
+	<meta name="description" content="Creative Agency, Design and develop mobile apps.">
+	<meta name="keywords" content="Creative Agency, App Agency">
+	<meta name="author" content="Ifeanyi Agalagba">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="theme-color" content="#e8f1ff">
