--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                <div class="row key-and-award">
                   <div class="ree-app-st-a flx-end m-order2">
                      <div class="btnctm">						
-                        <a href="about.html" class="ree-btn ree-btn-grdt2 mw-80 m-mt30">Know More Reevan <i class="fas fa-arrow-right fa-btn"></i></a>
+                        <a href="about.html" class="ree-btn ree-btn-grdt2 mw-80 m-mt30">Know More VenbrinoDevs <i class="fas fa-arrow-right fa-btn"></i></a>
                      </div>
                   </div>
                   <!-- <div class="ree-app-st-b m-order1">
@@ -238,7 +238,7 @@
             <div class="row">
                <div class="col-lg-12">
                   <div class="sec-heading text-center">
-                     <span class="sub-heading mb15">Reevan Services</span>					
+                     <span class="sub-heading mb15">VenbrinoDevs Services</span>					
                      <h2>We build modern <span class="ree-text rt40">creative</span> <span class="ree-text rt40">mobile</span> experiences.</h2>
                   </div>
                </div>
@@ -261,7 +261,7 @@
                      <div class="ree-card-img"><img src="images/icons/apple.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="service-details.html">iOS Development</a></h3>
-                        <p>At Reevan, We offer pixel perfect responsive website design services which are built around aesthetics and usability.</p>
+                        <p>At Venbrino Agency, we offer pixel perfect responsive website design services which are built around aesthetics and usability.</p>
                      </div>
                      <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
@@ -274,7 +274,7 @@
                      <div class="ree-card-img"><img src="images/icons/cube.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="service-details.html">Hybrid App Development</a></h3>
-                        <p>Reevan’s product design services cover entire product design lifecycle, From prototyping to fully functional design.</p>
+                        <p>Venbrino agency's product design services cover entire product design lifecycle, From prototyping to fully functional design.</p>
                      </div>
                      <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
@@ -287,7 +287,7 @@
                      <div class="ree-card-img"><img src="images/icons/smartwatch.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="service-details.html">Wearable Development</a></h3>
-                        <p>Increase conversions. Increase leads. Increase sales. Increase revenue. That's digital marketing services from Reevan.</p>
+                        <p>Increase conversions. Increase leads. Increase sales. Increase revenue. That's digital marketing services from Venbrino agency.</p>
                      </div>
                      <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
@@ -355,8 +355,9 @@
                            <a href="#"><img src="images/portfolio/portfolio-1.jpg" alt="portfolio reevan" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
-                           <p class="mb10">UX, UI, Graphic Design</p>
-                           <h4><a href="#"> Creative and minimal clothing label design</a> </h4>
+                           <p class="mb10">Yandeel</p>
+                           <h4><a href="#"> Mobile app design and  
+                              development</a> </h4>
                         </div>
                      </div>
                      <div class="fwb-main-x fwb-a">
@@ -364,8 +365,9 @@
                            <a href="#">	<img src="images/portfolio/portfolio-2.jpg" alt="portfolio reevan" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
-                           <p class="mb10">UX, UI, Graphic Design</p>
-                           <h4><a href="#">Creative business card design service </a></h4>
+                           <p class="mb10">Shout</p>
+                           <h4><a href="#">Mobile app design and  
+                              development </a></h4>
                         </div>
                      </div>
                      <div class="fwb-main-x fwb-a">
@@ -373,8 +375,9 @@
                            <a href="#">	<img src="images/portfolio/portfolio-3.jpg" alt="portfolio reevan" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
-                           <p class="mb10">UX, UI, Graphic Design</p>
-                           <h4><a href="#"> Furniture ios app kit design development </a></h4>
+                           <p class="mb10">CreditDirect(Fcmb Bank)</p>
+                           <h4><a href="#"> Creative and minimal clothing
+                              Label design </a></h4>
                         </div>
                      </div>
                      <div class="fwb-main-x fwb-a">
@@ -382,8 +385,9 @@
                            <a href="#">	<img src="images/portfolio/portfolio-2.jpg" alt="portfolio reevan" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
-                           <p class="mb10">UX, UI, Graphic Design</p>
-                           <h4><a href="#"> Furniture ios app kit design development </a></h4>
+                           <p class="mb10">SynthChat</p>
+                           <h4><a href="#"> Mobile app design and  
+                              development </a></h4>
                         </div>
                      </div>
                      <div class="fwb-main-x fwb-a">
@@ -391,8 +395,9 @@
                            <a href="#">	<img src="images/portfolio/portfolio-2.jpg" alt="portfolio reevan" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
-                           <p class="mb10">UX, UI, Graphic Design</p>
-                           <h4><a href="#">Creative business card design service </a></h4>
+                           <p class="mb10">PaySocial</p>
+                           <h4><a href="#">Creative and minimal clothing
+                              Label design </a></h4>
                         </div>
                      </div>
                      <div class="fwb-main-x fwb-a">
@@ -400,17 +405,9 @@
                            <a href="#">	<img src="images/portfolio/portfolio-3.jpg" alt="portfolio reevan" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
-                           <p class="mb10">UX, UI, Graphic Design</p>
-                           <h4><a href="#"> Furniture ios app kit design development </a></h4>
-                        </div>
-                     </div>
-                     <div class="fwb-main-x fwb-a">
-                        <div class="work-thumbnails">
-                           <a href="#">	<img src="images/portfolio/portfolio-2.jpg" alt="portfolio reevan" class="img-fluid"> </a>
-                        </div>
-                        <div class="work-details">
-                           <p class="mb10">UX, UI, Graphic Design</p>
-                           <h4><a href="#"> Furniture ios app kit design development </a></h4>
+                           <p class="mb10">Zero Depression</p>
+                           <h4><a href="#"> Mobile app design and  
+                              development </a></h4>
                         </div>
                      </div>
                   </div>
@@ -573,8 +570,8 @@
                      <h2 class="mb50">Our <span class="ree-text rt40">clients</span> <span class="ree-text rt40">praise</span> us for our great results</h2>
                      <div class="testimonial-card-b owl-carousel mt30">
                         <div class="review-slider">
-                           <h4 class="mb20">"Reevan build my startup business a great website that really helps current and	potential customers get a good feel for my company."</h4>
-                           <p>I am delighted with our new website. A1 service and design by Reevan. You can go with the Web Design Company, and I 100% recommend them to anyone. The perfect company to go to for your ideal website and digital marketing.</p>
+                           <h4 class="mb20">"Venbrino Agency build my startup business a great website that really helps current and	potential customers get a good feel for my company."</h4>
+                           <p>I am delighted with our new website. A1 service and design by VenbrinoDevs. You can go with the Web Design Company, and I 100% recommend them to anyone. The perfect company to go to for your ideal website and digital marketing.</p>
                            <div class="reviewers mt30">
                               <div class="reviewers-nam">
                                  <h4>Anne Fibbiyon</h4>
@@ -583,8 +580,8 @@
                            </div>
                         </div>
                         <div class="review-slider">
-                           <h4 class="mb20">"Reevan build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
-                           <p>I was facing multiple issues with my old website and that i discovered reevan. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
+                           <h4 class="mb20">"Venbrino Agency build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
+                           <p>I was facing multiple issues with my old website and that i discovered VenbrinoDevs. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
                            <div class="reviewers mt30">
                               <div class="reviewers-nam">
                                  <h4>Mayank Jhalana</h4>
@@ -593,8 +590,8 @@
                            </div>
                         </div>
                         <div class="review-slider">
-                           <h4 class="mb20">"Reevan build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
-                           <p>I was facing multiple issues with my old website and that i discovered reevan. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
+                           <h4 class="mb20">"Venbrino Agency build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
+                           <p>I was facing multiple issues with my old website and that i discovered VenbrinoDevs. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
                            <div class="reviewers mt30">
                               <div class="reviewers-nam">
                                  <h4>Eric Shun</h4>
@@ -603,8 +600,8 @@
                            </div>
                         </div>
                         <div class="review-slider">
-                           <h4 class="mb20">"Reevan build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
-                           <p>I was facing multiple issues with my old website and that i discovered reevan. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
+                           <h4 class="mb20">"Venbrino Agency build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
+                           <p>I was facing multiple issues with my old website and that i discovered VenbrinoDevs. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
                            <div class="reviewers mt30">
                               <div class="reviewers-nam">
                                  <h4>Gene Jacket</h4>
@@ -613,8 +610,8 @@
                            </div>
                         </div>
                         <div class="review-slider">
-                           <h4 class="mb20">"Reevan build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
-                           <p>I was facing multiple issues with my old website and that i discovered reevan. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
+                           <h4 class="mb20">"Venbrino Agency build my startup business a great website that really helps current and potential customers get a good feel for my company."</h4>
+                           <p>I was facing multiple issues with my old website and that i discovered VenbrinoDevs. they resolved all the problems in the website they also helped me with marketing. which has helped me to acquire more customers. Retention on the website has also increased.</p>
                            <div class="reviewers mt30">
                               <div class="reviewers-nam">
                                  <h4>Marion Gaze</h4>
@@ -791,7 +788,7 @@
                                     name="example1" checked="checked">
                                  <label class="custom-control-label label-f-form" for="customCheck">I agree to
                                  the <a href="javascript:void(0)">Terms &amp; Conditions</a> of
-                                 Reevan.</label>
+                                 Venbrino Agency.</label>
                               </div>
                               <div class="fieldsets mt20"> <button type="submit" name="submit"
                                  class="ree-btn  ree-btn-grdt1 w-100">Send your inquiry <i
@@ -874,7 +871,7 @@
 										<a href="#"> <img src="images/footer-logo.png" alt="reeven" class="img w-100"> </a>
 									</div>
 								</div>
-                        <p class="mt15">Overall client rating is 4.9 out of 8,500 Clients for Reevan</p>
+                        <p class="mt15">Overall client rating is 4.9 out of 8,500 Clients for Venbrino Agency</p>
 
                         <ul class="footer_social mt30">
                            <li><a href="#" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
