--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<li><a href="#about" class="menu-links">About Us</a></li>						
 						<li><a href="#service" class="menu-links">Services</a></li>						
 						<li><a href="#work" class="menu-links">Our Work</a></li>						
-						<li><a href="#review" class="menu-links">Clients Review</a></li>						
+						<!-- <li><a href="#review" class="menu-links">Clients Review</a></li>						 -->
 						<li><a href="#blog" class="menu-links">Blogs</a></li>						
 						<li><a href="#contact" class="menu-links">Contact Us</a></li>						
 					</ul>
@@ -67,7 +67,7 @@
 						<li><a href="#about" class="menu-links">About Us</a></li>						
 						<li><a href="#service" class="menu-links">Services</a></li>						
 						<li><a href="#work" class="menu-links">Our Work</a></li>						
-						<li><a href="#review" class="menu-links">Clients Review</a></li>						
+						<!-- <li><a href="#review" class="menu-links">Clients Review</a></li>						 -->
 						<li><a href="#blog" class="menu-links">Blogs</a></li>						
 						<li><a href="#contact" class="menu-links">Contact Us</a></li>	
 					</ul>
@@ -87,7 +87,7 @@
 							</a>
 						</li>
 						<li class="ree-hc">
-							<a href="skype:reevan.company" rel="noreferrer" target="_blank"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+							<a href="skype:venbrinodev.company" rel="noreferrer" target="_blank"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 									<path d="M424.7 299.8c2.9-14 4.7-28.9 4.7-43.8 0-113.5-91.9-205.3-205.3-205.3-14.9 0-29.7 1.7-43.8 4.7C161.3 40.7 137.7 32 112 32 50.2 32 0 82.2 0 144c0 25.7 8.7 49.3 23.3 68.2-2.9 14-4.7 28.9-4.7 43.8 0 113.5 91.9 205.3 205.3 205.3 14.9 0 29.7-1.7 43.8-4.7 19 14.6 42.6 23.3 68.2 23.3 61.8 0 112-50.2 112-112 .1-25.6-8.6-49.2-23.2-68.1zm-194.6 91.5c-65.6 0-120.5-29.2-120.5-65 0-16 9-30.6 29.5-30.6 31.2 0 34.1 44.9 88.1 44.9 25.7 0 42.3-11.4 42.3-26.3 0-18.7-16-21.6-42-28-62.5-15.4-117.8-22-117.8-87.2 0-59.2 58.6-81.1 109.1-81.1 55.1 0 110.8 21.9 110.8 55.4 0 16.9-11.4 31.8-30.3 31.8-28.3 0-29.2-33.5-75-33.5-25.7 0-42 7-42 22.5 0 19.8 20.8 21.8 69.1 33 41.4 9.3 90.7 26.8 90.7 77.6 0 59.1-57.1 86.5-112 86.5z" />
 								</svg>
 							</a>
@@ -125,7 +125,7 @@
                         <div class="media vcenter mt20">
                            <div class="ree-icon-set img-round80"><img src="images/users/portrait4.png" alt="img" class="img-fluid"></div>
                            <div class="ree-details-set user-info">
-                              <h5>Kamlesh Happy</h5>
+                              <h5>Ifeanyi Agalagba</h5>
                               <p>Business Head</p>
                            </div>
                         </div>
@@ -192,8 +192,8 @@
                         </div>
                         <div class="agency-info-anim text-center">
                            <div class="animated-logo">
-                              <img src="images/logo.png" alt="reevan logo" class="logo-anim">
-                              <img src="images/others/app-development.webp" alt="reevan logo" class="circle-anim">
+                              <img src="images/logo.png" alt="venbrinodev logo" class="logo-anim">
+                              <img src="images/others/app-development.webp" alt="venbrinodev logo" class="circle-anim">
                            </div>
                         </div>
                      </div>
@@ -352,7 +352,7 @@
                   <div class="full-work-app owl-nv  owl-carousel">
                      <div class="fwb-main-x fwb-a">
                         <div class="work-thumbnails">
-                           <a href="#"><img src="images/portfolio/portfolio-1.jpg" alt="portfolio reevan" class="img-fluid"> </a>
+                           <a href="#"><img src="images/portfolio/yandeel.png" alt="portfolio venbrinodev" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
                            <p class="mb10">Yandeel</p>
@@ -362,7 +362,7 @@
                      </div>
                      <div class="fwb-main-x fwb-a">
                         <div class="work-thumbnails">
-                           <a href="#">	<img src="images/portfolio/portfolio-2.jpg" alt="portfolio reevan" class="img-fluid"> </a>
+                           <a href="#">	<img src="images/portfolio/shout.png" alt="portfolio venbrinodev" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
                            <p class="mb10">Shout</p>
@@ -372,7 +372,7 @@
                      </div>
                      <div class="fwb-main-x fwb-a">
                         <div class="work-thumbnails">
-                           <a href="#">	<img src="images/portfolio/portfolio-3.jpg" alt="portfolio reevan" class="img-fluid"> </a>
+                           <a href="#">	<img src="images/portfolio/credit-direct.png" alt="portfolio venbrinodev" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
                            <p class="mb10">CreditDirect(Fcmb Bank)</p>
@@ -382,7 +382,7 @@
                      </div>
                      <div class="fwb-main-x fwb-a">
                         <div class="work-thumbnails">
-                           <a href="#">	<img src="images/portfolio/portfolio-2.jpg" alt="portfolio reevan" class="img-fluid"> </a>
+                           <a href="#">	<img src="images/portfolio/synthchat.png" alt="portfolio venbrinodev" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
                            <p class="mb10">SynthChat</p>
@@ -392,7 +392,7 @@
                      </div>
                      <div class="fwb-main-x fwb-a">
                         <div class="work-thumbnails">
-                           <a href="#">	<img src="images/portfolio/portfolio-2.jpg" alt="portfolio reevan" class="img-fluid"> </a>
+                           <a href="#">	<img src="images/portfolio/pay-social.png" alt="portfolio venbrinodev" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
                            <p class="mb10">PaySocial</p>
@@ -402,7 +402,7 @@
                      </div>
                      <div class="fwb-main-x fwb-a">
                         <div class="work-thumbnails">
-                           <a href="#">	<img src="images/portfolio/portfolio-3.jpg" alt="portfolio reevan" class="img-fluid"> </a>
+                           <a href="#">	<img src="images/portfolio/zero-depression.png" alt="portfolio venbrinodev" class="img-fluid"> </a>
                         </div>
                         <div class="work-details">
                            <p class="mb10">Zero Depression</p>
@@ -439,7 +439,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/apple.svg"
+                        <div class="iwt-icon"> <img src="images/icons/apple-logo.png"
                            alt="Apple"> </div>
                         <div class="iwt-content">
                            <p>iOS</p>
@@ -450,7 +450,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/android.svg"
+                        <div class="iwt-icon"> <img src="images/icons/android-logo.png"
                            alt="Android"> </div>
                         <div class="iwt-content">
                            <p>Android</p>
@@ -461,7 +461,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/flutterio-icon.svg"
+                        <div class="iwt-icon"> <img src="images/icons/flutter-logo.png"
                            alt="Flutter"> </div>
                         <div class="iwt-content">
                            <p>Flutter</p>
@@ -472,7 +472,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/java.svg" alt="Java">
+                        <div class="iwt-icon"> <img src="images/icons/java-logo.png" alt="Java">
                         </div>
                         <div class="iwt-content">
                            <p>Java</p>
@@ -483,7 +483,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/physics.svg"
+                        <div class="iwt-icon"> <img src="images/icons/react-logo.png"
                            alt="React Native"> </div>
                         <div class="iwt-content">
                            <p>React Native</p>
@@ -494,7 +494,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/apple.svg"
+                        <div class="iwt-icon"> <img src="images/icons/python-logo.png"
                            alt="python"> </div>
                         <div class="iwt-content">
                            <p>Python</p>
@@ -505,7 +505,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/java.svg" alt="Java">
+                        <div class="iwt-icon"> <img src="images/icons/java-logo.png" alt="Java">
                         </div>
                         <div class="iwt-content">
                            <p>Java</p>
@@ -516,7 +516,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/swift.svg"
+                        <div class="iwt-icon"> <img src="images/icons/swift-logo.png"
                            alt="Apswiftple"> </div>
                         <div class="iwt-content">
                            <p>Swift</p>
@@ -527,7 +527,7 @@
                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                   <div class="icon-with-title">
                      <a href="javascript:void(0)">
-                        <div class="iwt-icon"> <img src="images/icons/pwa.svg" alt="pwa">
+                        <div class="iwt-icon"> <img src="images/icons/pwa-logo.png" alt="pwa">
                         </div>
                         <div class="iwt-content">
                            <p>PWA</p>
@@ -541,7 +541,7 @@
       <!--end technologies-->
 
       <!--start home review-->
-      <section class="r-bg-c sec-pad" id="review">
+      <!-- <section class="r-bg-c sec-pad" id="review">
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
@@ -633,7 +633,7 @@
                </div>
             </div>
          </div>
-      </section>
+      </section> -->
       <!--end home review -->
 
       <!--download app-->
@@ -646,13 +646,13 @@
                      <h2 class="mb15">We Are Partner With <span class="ree-text rt40">Top</span> <span class="ree-text rt40">Ventures</span></h2>
                      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p>
                      <div class="btn-sets mt40">
-                        <a href="about.html" class="ree-btn  ree-btn-grdt1 mr20">Play Store <i class="fab fa-android ml10"></i></a>                         
-                        <a href="about.html" class="ree-btn  ree-btn-grdt2 mr20">iOS Store <i class="fab fa-apple ml10"></i></a>
+                        <a href="#" class="ree-btn  ree-btn-grdt1 mr20">Play Store <i class="fab fa-android ml10"></i></a>                         
+                        <a href="#" class="ree-btn  ree-btn-grdt2 mr20">iOS Store <i class="fab fa-apple ml10"></i></a>
                      </div>
                   </div>
                </div>
                <div class="col-lg-6 vcenter">
-                  <div class="sol-image m-mt30"><img src="images/others/our-app.png" alt="our app" class="img-fluid"></div>
+                  <div class="sol-image m-mt30"><img src="images/others/download-app.png" alt="our app" class="img-fluid"></div>
                </div>
             </div>
          </div>
@@ -717,34 +717,34 @@
             <div class="row zup flx-end">
                <div class="col-right-a">
                   <div class="sec-heading fourc-up-a">
-                     <span class="sub-heading mb15">Inquiry</span>
-                     <h2>Let’s Get in <span class="ree-text rt40">Touch</span></h2>
+                     <span class="sub-heading mb15 ">Inquiry</span>
+                     <h2 class="text-white">Let’s Get in <span class="ree-text rt40">Touch</span></h2>
                   </div>
                   <div class="home-contact-block">
                      <div class="contact-infos">
                         <div class="c-infot">
-                           <span>Sales Department</span> <a href="tel:+911234567890"><i class="fas fa-phone-alt"></i> +91 123 4567 890</a>
+                           <span>Sales Department</span> <a href="tel:+2349066269233"><i class="fas fa-phone-alt"></i> +234 906 626 9233</a>
                         </div>
                         <div class="c-infot">
-                           <span>HR Department</span> <a href="tel:+911234567890"><i class="fas fa-phone-alt"></i> +91 123 4567 890</a>
+                           <span>HR Department</span> <a href="tel:+2349066269233"><i class="fas fa-phone-alt"></i> +234 906 626 9233</a>
                         </div>
                      </div>
                      <div class="contact-infos mt35">
                         <div class="c-infot">
-                           <span>Sales Department</span> <a href="mailto:reevan@abc.com"><i class="fas fa-envelope"></i> reevan@abc.com</a>
+                           <span>Sales Department</span> <a href="mailto:sales@venbrinodev.com" class="overflow-hidden"><i class="fas fa-envelope"></i> sales@venbrinodev.com</a>
                         </div>
                         <div class="c-infot">
-                           <span>Connect on Skype</span> <a href="skype:reevan.company"><i class="fab fa-skype"></i> reevan.company</a>
+                           <span>Connect on Skype</span> <a href="skype:venbrinodev.agency" class="overflow-hidden"><i class="fab fa-skype"></i> venbrinodev.agency</a>
                         </div>
                      </div>
-                     <div class="live-review- mt60">
+                     <!-- <div class="live-review- mt60">
                         <span>Read Our Customers Feedback</span>
                         <div class="livrve">
                            <a href="#"><img src="images/icons/google-logo.svg" alt="review"> </a>
                            <a href="#"><img src="images/icons/hubspot-logo.svg" alt="review"> </a>
                            <a href="#"><img src="images/icons/trustpilot-logo.svg" alt="review"> </a>
                         </div>
-                     </div>
+                     </div> -->
                   </div>
                </div>
                <div class="col-right-b">
@@ -888,11 +888,11 @@
                   <div class="col-5s">
                      <h5>For Work inquiry</h5>
                      <ul class="footer-links-list social-linkz">
-                        <li><a href="tel:+911234567890"><span><i class="fas fa-phone-square-alt"></i></span> +91 123 4567 890 </a></li>
-                        <li><a href="https://wa.me/+911234567890"><span><i class="fab fa-whatsapp-square"></i></span> +91 123 4567 890</a></li>
-                        <li><a href="mailto:career@reevan.com"><span><i class="fas fa-envelope"></i></span> career@reevan.com</a></li>
-                        <li><a href="mailto:career@reevan.com"><span><i class="fas fa-envelope"></i></span> info@reevan.com</a></li>
-                        <li><a href="skype:reevan.company"><span><i class="fab fa-skype"></i></span> reevan-skype</a></li>
+                        <li><a href="tel:+2349066269233"><span><i class="fas fa-phone-square-alt"></i></span> +234 906 626 9233 </a></li>
+                        <li><a href="https://wa.me/+2349066269233"><span><i class="fab fa-whatsapp-square"></i></span> +234 906 626 9233</a></li>
+                        <li><a href="mailto:career@venbrinodev.com"><span><i class="fas fa-envelope"></i></span> career@venbrinodev.com</a></li>
+                        <li><a href="mailto:career@venbrinodev.com"><span><i class="fas fa-envelope"></i></span> info@venbrinodev.com</a></li>
+                        <li><a href="skype:venbrinodev.company"><span><i class="fab fa-skype"></i></span> venbrinodev-skype</a></li>
                      </ul>
                   </div>
                   <div class="col-5s">
