ui changes to landing page

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <div class="row mt30">
                <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="100">
                   <div class="ree-card r-bg-c mt60">
-                     <div class="ree-card-img shadows"><img src="images/icons/android.svg" alt="services"> </div>
+                     <div class="ree-card-img shadows"><img src="images/icons/android-logo.png" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="service-details.html"> Android Development</a></h3>
                         <p>Our software house has been recognised by google for outstanding android application	quality.</p>
@@ -258,7 +258,7 @@
                </div>
                <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="300">
                   <div class="ree-card r-bg-c  mt60">
-                     <div class="ree-card-img"><img src="images/icons/apple.svg" alt="services"> </div>
+                     <div class="ree-card-img"><img src="images/icons/apple-logo.png" alt="services"> </div>
                      <div class="ree-card-content mt40">
                         <h3 class="mb15"><a href="service-details.html">iOS Development</a></h3>
                         <p>At Venbrino Agency, we offer pixel perfect responsive website design services which are built around aesthetics and usability.</p>
@@ -731,7 +731,7 @@
                      </div>
                      <div class="contact-infos mt35">
                         <div class="c-infot">
-                           <span>Sales Department</span> <a href="mailto:sales@venbrinodev.com" class="overflow-hidden"><i class="fas fa-envelope"></i> sales@venbrinodev.com</a>
+                           <span>Sales Department</span> <a href="mailto:hello@venbrinoDevs.com" class="overflow-hidden"><i class="fas fa-envelope"></i> hello@venbrinoDevs.com</a>
                         </div>
                         <div class="c-infot">
                            <span>Connect on Skype</span> <a href="skype:venbrinodev.agency" class="overflow-hidden"><i class="fab fa-skype"></i> venbrinodev.agency</a>
@@ -874,11 +874,11 @@
                         <p class="mt15">Overall client rating is 4.9 out of 8,500 Clients for Venbrino Agency</p>
 
                         <ul class="footer_social mt30">
-                           <li><a href="#" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                           <li><a href="https://twitter.com/venbrinoDevs" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                            <li> <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                            <li><a href="#" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
-                           <li><a href="#" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
-                           <li> <a href="#" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
+                           <li><a href="https://www.linkedin.com/company/venbrinodevs/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
+                           <li> <a href="https://www.instagram.com/venbrinoDevs/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
                         </ul>
 
                        <a href="#" class="ree-btn  ree-btn-grdt1 mw-80 no-shadows mt40">Our Brochure <i class="fas fa-arrow-right fa-btn"></i></a>
