--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="media vcenter mt20">
                            <div class="ree-icon-set img-round80"><img src="images/users/portrait4.png" alt="img" class="img-fluid"></div>
                            <div class="ree-details-set user-info">
-                              <h5>Ifeanyi Agalagba</h5>
+                              <h5>Ifeanyi Precious</h5>
                               <p>Business Head</p>
                            </div>
                         </div>
@@ -251,9 +251,9 @@
                         <h3 class="mb15"><a href="service-details.html"> Android Development</a></h3>
                         <p>Our software house has been recognised by google for outstanding android application	quality.</p>
                      </div>
-                     <div class="ree-card-content-link">
+                     <!-- <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i> </a>
-                     </div>
+                     </div> -->
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="300">
@@ -263,10 +263,10 @@
                         <h3 class="mb15"><a href="service-details.html">iOS Development</a></h3>
                         <p>At Venbrino Agency, we offer pixel perfect responsive website design services which are built around aesthetics and usability.</p>
                      </div>
-                     <div class="ree-card-content-link">
+                     <!-- <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
-                     </div>
+                     </div> -->
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="500">
@@ -276,10 +276,10 @@
                         <h3 class="mb15"><a href="service-details.html">Hybrid App Development</a></h3>
                         <p>Venbrino agency's product design services cover entire product design lifecycle, From prototyping to fully functional design.</p>
                      </div>
-                     <div class="ree-card-content-link">
+                     <!-- <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
-                     </div>
+                     </div> -->
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="700">
@@ -289,10 +289,10 @@
                         <h3 class="mb15"><a href="service-details.html">Wearable Development</a></h3>
                         <p>Increase conversions. Increase leads. Increase sales. Increase revenue. That's digital marketing services from Venbrino agency.</p>
                      </div>
-                     <div class="ree-card-content-link">
+                     <!-- <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
-                     </div>
+                     </div> -->
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="900">
@@ -302,10 +302,10 @@
                         <h3 class="mb15"><a href="service-details.html">UI/UX Designing</a></h3>
                         <p>Our highly experienced designers comprehend your vision and business objectives in order to create the designs.</p>
                      </div>
-                     <div class="ree-card-content-link">
+                     <!-- <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
-                     </div>
+                     </div> -->
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-delay="1100">
@@ -315,14 +315,14 @@
                         <h3 class="mb15"><a href="service-details.html">Web App Development</a></h3>
                         <p>Our highly experienced designers comprehend your vision and business objectives in order to create the designs.</p>
                      </div>
-                     <div class="ree-card-content-link">
+                     <!-- <div class="ree-card-content-link">
                         <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
-            <div class="cta-block-wide mt100">
+            <!-- <div class="cta-block-wide mt100">
                <div class="row justify-content-center text-center">
                   <div class="col-lg-10 vcenter">
                      <div class="cta-heading-wide-bt">
@@ -331,7 +331,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div> -->
          </div>
       </section>
       <!--services end-->
@@ -871,7 +871,7 @@
 										<a href="#"> <img src="images/footer-logo.png" alt="reeven" class="img w-100"> </a>
 									</div>
 								</div>
-                        <p class="mt15">Overall client rating is 4.9 out of 8,500 Clients for Venbrino Agency</p>
+                        <p class="mt15">Overall client rating is 4.9 out of 8,500 Clients for VenbrinoDevs</p>
 
                         <ul class="footer_social mt30">
                            <li><a href="https://twitter.com/venbrinoDevs" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
