ui changes to landing page

--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
 						<li><a href="#service" class="menu-links">Services</a></li>						
 						<li><a href="#work" class="menu-links">Our Work</a></li>						
 						<!-- <li><a href="#review" class="menu-links">Clients Review</a></li>						 -->
-						<li><a href="#blog" class="menu-links">Blogs</a></li>						
+						<!-- <li><a href="#blog" class="menu-links">Blogs</a></li>						 -->
 						<li><a href="#contact" class="menu-links">Contact Us</a></li>						
 					</ul>
 				</div>
 				<div class="ree-nav-cta">
 					<ul>
-						<li><a href="get-quote.html" class="ree-btn ree-btn0 ree-btn-grdt2"> Request Quote</a> </li>
+						<li><a href="#contact" class="ree-btn ree-btn0 ree-btn-grdt2"> Request Quote</a> </li>
 					</ul>
 				</div>
 				<div class="mobile-menu2">
 					<ul class="mob-nav2">
-						<li><a href="get-quote.html" class="ree-btn2 ree-btn-grdt1"><i class="fas fa-envelope-open-text"></i></a></li>
+						<li><a href="#contact" class="ree-btn2 ree-btn-grdt1"><i class="fas fa-envelope-open-text"></i></a></li>
 						<li class="navm-"><a class="toggle" href="#"> <span></span> </a> </li>
 					</ul>
 				</div>
@@ -68,7 +68,7 @@
 						<li><a href="#service" class="menu-links">Services</a></li>						
 						<li><a href="#work" class="menu-links">Our Work</a></li>						
 						<!-- <li><a href="#review" class="menu-links">Clients Review</a></li>						 -->
-						<li><a href="#blog" class="menu-links">Blogs</a></li>						
+						<!-- <li><a href="#blog" class="menu-links">Blogs</a></li>						 -->
 						<li><a href="#contact" class="menu-links">Contact Us</a></li>	
 					</ul>
 					<ul class="bottom-nav">
@@ -143,7 +143,7 @@
       <!--hero Section End-->
 
       <!--start home-about  -->
-      <section class="home-about sec-pad r-bg-a">
+      <section id="about" class="home-about sec-pad r-bg-a">
          <div class="container">
             <div class="row justify-content-center">
                <div class="col-lg-10">
@@ -417,7 +417,7 @@
                <div class="col-lg-10">
                   <div class="cta-heading-wide-bt">
                      <h3 class="w-txt">Take a look of our quality work</h3>
-                     <a href="portfolio.html" class="ree-btn  ree-btn-grdt1 mw-80 no-shadows">View All Work <i class="fas fa-arrow-right fa-btn"></i></a>				
+                     <!-- <a href="portfolio.html" class="ree-btn  ree-btn-grdt1 mw-80 no-shadows">View All Work <i class="fas fa-arrow-right fa-btn"></i></a>				 -->
                   </div>
                </div>
             </div>
@@ -660,7 +660,7 @@
       <!--download app end-->
 
       <!--start blogs  -->
-	<section class="half-bg-ree sec-pad" id="blog">
+	<!-- <section class="half-bg-ree sec-pad" id="blog">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -708,11 +708,11 @@
 			</div>
 		</div>
       <div id="contact"></div>
-	</section>
+	</section> -->
 	<!--end blogs-->
 
       <!--start contact block-->
-      <section class="home-contact pb120" data-background="images/others/office.jpg">
+      <section id="contact" class="home-contact pb120" data-background="images/others/office.jpg">
          <div class="container">
             <div class="row zup flx-end">
                <div class="col-right-a">
@@ -806,7 +806,7 @@
       <!--start contact block-->
 
       <!-- start locations -->
-      <div class="location-home sec-pad">
+      <!-- <div class="location-home sec-pad">
          <div class="container">
             <div class="row justify-content-center">
                <div class="col-lg-4">
@@ -856,7 +856,7 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
       <!-- end locations -->
 
       <!--start footer -->
@@ -940,7 +940,7 @@
                   </div>
                   <div class="col-lg-7">
                      <div class="ft-copyright ft-r">
-                        <p>© 2021-2022. All Rights Reserved By <a href="https://themeforest.net/user/rajesh-doot/portfolio" target="blank">Rajesh Doot</a></p>
+                        <p>© 2021-2022. All Rights Reserved </p>
                      </div>
                   </div>
                </div>
