minor ui fixes on landing page

--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
                         <li><a href="https://wa.me/+2349066269233"><span><i class="fab fa-whatsapp-square"></i></span> +234 906 626 9233</a></li>
                         <li><a href="mailto:career@venbrinodev.com"><span><i class="fas fa-envelope"></i></span> career@venbrinodev.com</a></li>
                         <li><a href="mailto:career@venbrinodev.com"><span><i class="fas fa-envelope"></i></span> info@venbrinodev.com</a></li>
-                        <li><a href="skype:venbrinodev.company"><span><i class="fab fa-skype"></i></span> venbrinodev-skype</a></li>
+                        <!-- <li><a href="skype:venbrinodev.company"><span><i class="fab fa-skype"></i></span> venbrinodev-skype</a></li> -->
                      </ul>
                   </div>
                   <div class="col-5s">
