--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
                         <ul class="footer_social mt30">
                            <li><a href="https://twitter.com/venbrinoDevs" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                            <li> <a href="#" target="_blank"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                           <li><a href="#" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
+                           <li><a href="https://youtube.com/channel/UCXbczv3jFHz5NrGcnLFEOuQ" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a></li>
                            <li><a href="https://www.linkedin.com/company/venbrinodevs/" target="_blank"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a></li>
                            <li> <a href="https://www.instagram.com/venbrinoDevs/" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a> </li>
                         </ul>
