--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
                      </p>
                   
                      <div class="btn-sets2 vcenter  mt20" data-aos="fade-in" data-aos-delay="1100">
-                        <a href="get-quote.html" class="ree-btn  ree-btn-grdt1 mw-80 mr20 mt20">Talk to Expert <i class="fas fa-arrow-right fa-btn"></i></a>
+                        <a href="#contact" class="ree-btn  ree-btn-grdt1 mw-80 mr20 mt20">Talk to Expert <i class="fas fa-arrow-right fa-btn"></i></a>
                         <div class="media vcenter mt20">
                            <div class="ree-icon-set img-round80"><img src="images/users/portrait4.png" alt="img" class="img-fluid"></div>
                            <div class="ree-details-set user-info">
@@ -251,11 +251,11 @@
                   <div class="ree-card r-bg-c mt60">
                      <div class="ree-card-img shadows"><img src="images/icons/android-logo.png" alt="services"> </div>
                      <div class="ree-card-content mt40">
-                        <h3 class="mb15"><a href="service-details.html"> Android Development</a></h3>
+                        <h3 class="mb15"><a href="#"> Android Development</a></h3>
                         <p>Our software house has been recognised by google for outstanding android application	quality.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
-                        <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i> </a>
+                        <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i> </a>
                      </div> -->
                   </div>
                </div>
@@ -263,11 +263,11 @@
                   <div class="ree-card r-bg-c  mt60">
                      <div class="ree-card-img"><img src="images/icons/apple-logo.png" alt="services"> </div>
                      <div class="ree-card-content mt40">
-                        <h3 class="mb15"><a href="service-details.html">iOS Development</a></h3>
+                        <h3 class="mb15"><a href="#">iOS Development</a></h3>
                         <p>At Venbrino Agency, we offer pixel perfect responsive website design services which are built around aesthetics and usability.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
-                        <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
+                        <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
                      </div> -->
                   </div>
@@ -276,11 +276,11 @@
                   <div class="ree-card r-bg-c  mt60">
                      <div class="ree-card-img"><img src="images/icons/cube.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
-                        <h3 class="mb15"><a href="service-details.html">Hybrid App Development</a></h3>
+                        <h3 class="mb15"><a href="#">Hybrid App Development</a></h3>
                         <p>Venbrino agency's product design services cover entire product design lifecycle, From prototyping to fully functional design.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
-                        <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
+                        <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
                      </div> -->
                   </div>
@@ -289,11 +289,11 @@
                   <div class="ree-card r-bg-c  mt60">
                      <div class="ree-card-img"><img src="images/icons/smartwatch.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
-                        <h3 class="mb15"><a href="service-details.html">Wearable Development</a></h3>
+                        <h3 class="mb15"><a href="#">Wearable Development</a></h3>
                         <p>Increase conversions. Increase leads. Increase sales. Increase revenue. That's digital marketing services from Venbrino agency.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
-                        <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
+                        <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
                      </div> -->
                   </div>
@@ -302,11 +302,11 @@
                   <div class="ree-card r-bg-c  mt60">
                      <div class="ree-card-img"><img src="images/icons/ux-interface.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
-                        <h3 class="mb15"><a href="service-details.html">UI/UX Designing</a></h3>
+                        <h3 class="mb15"><a href="#">UI/UX Designing</a></h3>
                         <p>Our highly experienced designers comprehend your vision and business objectives in order to create the designs.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
-                        <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
+                        <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
                      </div> -->
                   </div>
@@ -315,11 +315,11 @@
                   <div class="ree-card r-bg-c  mt60">
                      <div class="ree-card-img"><img src="images/icons/app-development.svg" alt="services"> </div>
                      <div class="ree-card-content mt40">
-                        <h3 class="mb15"><a href="service-details.html">Web App Development</a></h3>
+                        <h3 class="mb15"><a href="#">Web App Development</a></h3>
                         <p>Our highly experienced designers comprehend your vision and business objectives in order to create the designs.</p>
                      </div>
                      <!-- <div class="ree-card-content-link">
-                        <a href="service-details.html" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
+                        <a href="#" class="ree-card-link mt40">Read More <i class="fas fa-arrow-right fa-btn"></i>
                         </a>
                      </div> -->
                   </div>
@@ -737,7 +737,7 @@
                            <span>Sales Department</span> <a href="mailto:hello@venbrinoDevs.com" class="overflow-hidden"><i class="fas fa-envelope"></i> hello@venbrinoDevs.com</a>
                         </div>
                         <div class="c-infot">
-                           <span>Connect on Skype</span> <a href="skype:venbrinodev.agency" class="overflow-hidden"><i class="fab fa-skype"></i> venbrinodev.agency</a>
+                           <span>Connect with Support</span> <a href="mailto:support@venbrinoDevs.com" class="overflow-hidden"><i class="fab fa-skype"></i> support@venbrinoDevs.com</a>
                         </div>
                      </div>
                      <!-- <div class="live-review- mt60">
@@ -757,21 +757,21 @@
                            <h3>Please fill in the form below.</h3>
                         </div>
                         <div class="form-body">
-                           <form action="#" method="post" name="feedback-form">
+                           <form action="/api/contact" method="post" name="feedback-form">
                               <div class="fieldsets row">
                                  <div class="col-md-6"><input type="text" placeholder="Full Name" name="name">	</div>
                                  <div class="col-md-6"><input type="email" placeholder="Email Address"
                                     name="email"></div>
                               </div>
                               <div class="fieldsets row">
-                                 <div class="col-md-6"><input type="number" placeholder="Contact Number"	name="phone"></div>
-                                 <div class="col-md-6"><input type="text" placeholder="Whatsapp" name="skype"></div>
+                                 <div class="col-md-6"><input type="tel" placeholder="Contact Number"	name="phone"></div>
+                                 <div class="col-md-6"><input type="tel" placeholder="Whatsapp" name="whatsapp"></div>
                               </div>
                               <div class="fieldsets row">
                                  <div class="col-md-6"><input type="text" placeholder="Subject" name="subject">
                                  </div>
                                  <div class="col-md-6">
-                                    <select>
+                                    <select name="interest">
                                        <option>interested in</option>
                                        <option>Web Design</option>
                                        <option>Graphic Design</option>
